# graphify-sf

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release-binaries.yml
graphify_sf/: __init__.py  __main__.py  _bundled_skill.md  analyze.py  build.py  cache.py  cluster.py  detect.py  export.py  llm.py  report.py  security.py  serve.py  validate.py  watch.py
graphify_sf/extract/: __init__.py  _ids.py  agentforce.py  apex.py  aura.py  automation.py  config.py  doc.py  flow.py  layout.py  lwc.py  object.py  profile.py  reporting.py  rules.py  sharing.py  visualforce.py
npm/: .gitignore  README.md  index.js  install.js  package.json
npm/lib/: download.js
npm/scripts/: build-subpackages.js
npm/test/: download.test.js  install.test.js  subpackage.test.js
skills/graphify-sf/: SKILL.md
tests/: README.md  conftest.py  test_analyze.py  test_automation_coverage.py  test_build.py  test_cli.py  test_cluster.py  test_datamodel_coverage.py  test_detect.py  test_detect_docs.py  test_detect_skip_dirs.py  test_extract_agentforce.py  test_extract_apex.py  test_extract_config.py  test_extract_doc.py  test_extract_flow.py  test_extract_lwc.py  test_extract_object.py  test_extract_pipeline.py  test_integration_coverage.py  test_llm.py  test_multigraph.py  test_reporting_packaging.py  test_security_sharing.py  test_ui_linkage.py
tests/fixtures/epicA_auth_csp_cors/force-app/main/default/authproviders/: MyAuthProvider.authprovider-meta.xml
tests/fixtures/epicA_auth_csp_cors/force-app/main/default/corsWhitelistOrigins/: MyOrigin.corsWhitelistOrigins-meta.xml
tests/fixtures/epicA_auth_csp_cors/force-app/main/default/cspTrustedSites/: MySite.cspTrustedSite-meta.xml
tests/fixtures/epicA_callout/force-app/main/default/classes/: CalloutLiteral.cls  CalloutNamed.cls  NoCallout.cls
tests/fixtures/epicA_callout/force-app/main/default/flows/: CalloutFlow.flow-meta.xml
tests/fixtures/epicA_config_read/force-app/main/default/classes/: ConfigReader.cls
tests/fixtures/epicA_ext_datasource/force-app/main/default/externalDataSources/: MyEDS.externalDataSource-meta.xml
tests/fixtures/epicA_ext_datasource/force-app/main/default/namedCredentials/: My_NC.namedCredential-meta.xml
tests/fixtures/epicA_platform_events/force-app/main/default/classes/: EventPublisher.cls
tests/fixtures/epicA_platform_events/force-app/main/default/triggers/: OrderEventTrigger.trigger
(+73 files in other folders)
